--- a/pages/experience.html
+++ b/pages/experience.html
@@ -46,7 +46,7 @@
           <li>Technical paper was published in Purdue Summer Undergraduate Research Fellowship e-Pubs (<a href="http://docs.lib.purdue.edu/surf/2017/presentations/42/" target="_blank">Paper</a>).</li>
         </ul>
         <p><u>Research poster for the project:</u></p>
-        <p><img src="../images/demo/Lin_Yuwen_PresentationFinal" alt="" height="18" width"24"></p>
+        <p><img src="../images/demo/Lin_Yuwen_PresentationFinal.png" alt="" height="18" width"24"></p>
         <p><u>Research presentation:</u></p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/W-z6swDPLyE?rel=0" frameborder="0" allowfullscreen></iframe>
         <br>
