--- a/pages/project.html
+++ b/pages/project.html
@@ -47,9 +47,7 @@
       <li>A routine to tag the objects</i>
     </ol>
     <p>We developed path and sensing algorithms by using ultrasonic sensors to estimate the location of objects and adjusting steering to stay within the desirable area. Our design received fifth place out of approximately forty groups during the final demonstration. Our team documented our design into a design proposal, a design report, a demonstration of the capabilities, and a PowerPoint presentation that we deliver our algorithms to other groups in the lab.</p>
-    <iframe width="420" height="315"
-    src="https://www.youtube.com/watch?v=Q7XX5_5yooY">
-    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Q7XX5_5yooY" frameborder="0" allowfullscreen></iframe>
     <br>
     <h2>Mbed version of Missile Command Video Arcade Game</h2>
     <p>I created a missile command video arcade game using Mbed microcontroller. The game was implemented in C.  The general algorithm used was a doubly linked list. Game features include aircraft movement, the ability to fire missiles, detecting missile interception points, animating explosions, detecting and animating city destruction, and displaying the game score. The level also advances when a certain amount of missiles has been intercepted or the user can force level advance using the push button. The code was documented to allow better understanding of the code for others.</p>
