--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<!--
+Template Name: RS-4 Clean
+Author: <a href="http://www.os-templates.com/">OS Templates</a>
+Author URI: http://www.os-templates.com/
+Licence: Free to use under our free template licence terms
+Licence URI: http://www.os-templates.com/template-terms
+-->
 <html>
 <head>
 <title>Wendy Lin | Contact</title>
@@ -19,44 +26,44 @@
     <nav id="topnav">
       <ul class="topnav clear">
         <li><a href="../index.html">About</a></li>
-        <li><a href="pages/education.html">Educaton</a></li>
-        <li><a href="experience.html">Experiences</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="experience.html">Experience</a></li>
         <li><a href="project.html">Projects</a></li>
         <li><a href="skill.html">Skills</a></li>
         <li><a href="activity.html">Activities</a></li>
         <li class="active"><a href="contact.html">Contact</a></li>
-        <li><a href="#">Link</a>
-          <ul>
-            <li><a href="https://www.linkedin.com/in/yuwenlin/" target="_blank">Linkedin</a></li>
-            <li><a href="https://www.facebook.com/wendy.lin.315" target="_blank">Facebook</a></li>
-          </ul>
-        </li>
       </ul>
     </nav>
   </header>
 </div>
 <!-- content -->
 <div class="wrapper row2">
-  <div id="container"> 
+  <div id="container">
     <!-- ################################################################################################ -->
-    <h1>Ultrasonic Sensing of Objects and DE2Bot Programming</h1>
-    <p>I have led a 4-person team to complete a class project in Digital Design Lab. The project required that we locate and tag objects using ultrasonic range-finders installed on a DE2Bot. The DE2Bot is comprised of the commercially-available AmigoBot with its electronics removed and replaced with custom hardware and an Altera DE2 FPGA development board. The configuration allows compete control of the robot hardware using custom digital circuits created within the FPGA. Our team took an approach that consisted of three main routines implemented in assembly code: </p>
-    <ol>
-      <li>A routine to determine the path the robot will travel along in search of objects</li>
-      <li>A routine to detect objects around the robot</i>
-      <li>A routine to tag the objects</i>
-    </ol>
-    <p>We developed path and sensing algorithms by using ultrasonic sensors to estimate the location of objects and adjusting steering to stay within the desirable area. Our design received fifth place out of approximately forty groups during the final demonstration. Our team documented our design into a design proposal, a design report, a demonstration of the capabilities, and a PowerPoint presentation that we deliver our algorithms to other groups in the lab.</p>
-    <h2>Mbed version of Missile Command Video Arcade Game</h2>
-    <p>I created a missile command video arcade game using Mbed microcontroller. The game was implemented in C.  The general algorithm used was a doubly linked list. Game features include aircraft movement, the ability to fire missiles, detecting missile interception points, animating explosions, detecting and animating city destruction, and displaying the game score. The level also advances when a certain amount of missiles has been intercepted or the user can force level advance using the push button. The code was documented to allow better understanding of the code for others.</p>
+
+    <p>Email: wendy.lin@gatech.edu</p>
+    <p><u>Resume</u></p>
+    <iframe src="https://drive.google.com/file/d/0BwceaH9yMfsfYWFPRTRxMGxTTFE/preview" width="640" height="480"></iframe>
+    <p>Connect with me on social media</p>
+    
+    <a target="_blank" title="find me on Linkedin" href="https://www.linkedin.com/in/yuwenlin/">
+    <img alt="connect with me on linkedin" src="../images/demo/linkedin.png" style="width:40px;height:40px;" border=0></a>
+    <a target="_blank" title="find me on Facebook" href="https://www.facebook.com/wendy.lin.315">
+    <img alt="follow me on facebook" src="../images/demo/facebook_40x40.png" border=0></a>
+    <a target="_blank" title="find me on instagram" href="https://www.instagram.com/nineninedream">
+    <img alt="follow me on instagram" src="../images/demo/instagram.png" style="width:40px;height:40px;" border=0></a>
+    <br>
+
     <!-- ################################################################################################ -->
     <div class="clear"></div>
   </div>
 </div>
+    
 <!-- Copyright -->
 <div class="wrapper row3">
   <footer id="copyright" class="clear">
-    <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Wendy LIn</a></p>
+    <p class="fl_left">Copyright &copy; 2017 - All Rights Reserved - <a href="#">Wendy Lin</a></p>
+    <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
   </footer>
 </div>
 </body>
