--- a/pages/education.html
+++ b/pages/education.html
@@ -56,6 +56,11 @@
     <p>ECE 2031 Digital Design Lab</p>
     <p>ECE 2040 Circuit Analysis</p>
     <p>ECE 3025 Electromagnetics</p>
+    <p>ECE 3040 Microelectronic Circuits</p>
+    <p>ECE 3043 Circuits & Electronics Lab</p>
+    <br>
+    <p><b>Energy</b></p>
+    <p>ECE 3072 Electric Energy System</p>
     <br>
     <p><b>Signal Processing</b></p>
     <p>ECE 2026 Introduction to Signal Processing</p>
@@ -63,6 +68,7 @@
     <br>
     <p><b>Computer Engineering and Computer Science</b></p>
     <p>ECE 2035 Programming System</p>
+    <p>ECE 3056 Computer Architecture</p>
     <p>CS 1331 Introduction to Object-Oriented Programming</p>
     <p>CS 1332 Data Structures and Algorithms</p>
     <p>CS 1371 Computing for Engineers</p>
