update contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,9 +41,11 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="container">
     <!-- ################################################################################################ -->
 
-    <p>Email: wendy840123@gmail.com</p>
+    <p>Email: yuwen.lin[at]berkeley.edu</p>
+    <!--
     <p><u>Resume</u></p>
     <iframe src="https://drive.google.com/file/d/0BwceaH9yMfsfYWFPRTRxMGxTTFE/preview" width="640" height="480"></iframe>
+     -->
     <p>Connect with me on social media</p>
     
     <a target="_blank" title="find me on Linkedin" href="https://www.linkedin.com/in/yuwenlin/">
