--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 ---
 layout: default
-title: Yu-wen (Wendy) Lin
+title: Wendy Lin
 ---
 <div class="blurb">
 <!--	<h1></h1>-->
-	<p>I am interested in optimization, machine learning, control systems and their applications to smart buildings.</p>
+	<h1>Yu-Wen (Wendy) Lin</h1>
+	<table class="imgtable"><tr><td>
+	<img style="width:auto; height:300px" src="images/demo/IMG_6110.jpg" alt="alt text" width="320px" />&nbsp;</td>
+	<td align="left">
+    	<p><b>PhD Scholar</b></p>
+    	<p><a href="https://www.eecs.berkeley.edu"target="_blank">Department of Electrical Engineering and Computer Sciences</a></p>
+    	<p><a href="https://www.berkeley.edu"target="_blank">University of California, Berkeley</a></p>
+		<p><b>Email</b>: yuwen.lin (at) berkeley.edu</p>
+		<p><b>Office</b>:  CREST Lab, 406 Cory Hall </p>
+
+
+<!--    	<a target="_blank" href="https://www.linkedin.com/in/hari-prasanna-das-7ab31757/"> LinkedIn </a>-->
+	</td></tr></table>
 	
-	<p>I am a second year PhD student in EECS at <a href="https://eecs.berkeley.edu/">UC Berkeley</a> </p>
+	<p>I am interested in optimization, machine learning, control systems and their applications to smart buildings. My directions of research including reinforcement learning on building control, modeling human behavior, and social game. My research analyzes human behavior to better energy efficiency in office buildings. </p>
+	<p>I am a second year PhD student in EECS at <a href="https://eecs.berkeley.edu/" target="_blank">UC Berkeley</a>. I am working at the intersection of machine learning, optimization, and thermal comfort. I am advised by <a href="https://vcresearch.berkeley.edu/faculty/costas-j-spanos" target="_blank">Costas J. Spanos</a>, and am part of the <a href="https://sinberbest.berkeley.edu/" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST)</a>. </p>
+	
+	
 </div><!-- /.blurb -->
