--- a/index.html
+++ b/index.html
@@ -2,17 +2,25 @@
 layout: default
 title: Wendy Lin
 ---
+<style>
+img {
+  float: left;
+  border: 1px dotted black;
+  margin: 0px 0px 15px 20px;
+}
+</style>
+
 <div class="blurb">
 <!--	<h1></h1>-->
 	<h1>Yu-Wen (Wendy) Lin</h1>
-	<table class="imgtable"><tr><td>
-	<img style="width:auto; height:300px" src="images/demo/IMG_6110.jpg" alt="alt text" width="320px" />&nbsp;</td>
-	<td align="left">
-    	<p><b>PhD Scholar</b></p>
-    	<p><a href="https://www.eecs.berkeley.edu"target="_blank">Department of Electrical Engineering and Computer Sciences</a></p>
-    	<p><a href="https://www.berkeley.edu"target="_blank">University of California, Berkeley</a></p>
-		<p><b>Email</b>: yuwen.lin (at) berkeley.edu</p>
-		<p><b>Office</b>:  CREST Lab, 406 Cory Hall </p>
+	<p><img src="images/demo/IMG_6110.jpg" width="300" height="400">
+	PhD Scholar
+	<a href="https://www.eecs.berkeley.edu"target="_blank">Department of Electrical Engineering and Computer Sciences</a>
+	<a href="https://www.berkeley.edu"target="_blank">University of California, Berkeley</a>
+	<b>Email</b>: yuwen.lin (at) berkeley.edu
+	<b>Office</b>:  CREST Lab, 406 Cory Hall
+	</p>
+
 
 
 <!--    	<a target="_blank" href="https://www.linkedin.com/in/hari-prasanna-das-7ab31757/"> LinkedIn </a>-->
