--- a/cv/index.html
+++ b/cv/index.html
@@ -2,5 +2,6 @@
 layout: default
 title: Publications
 ---
-
-<iframe src="https://drive.google.com/open?id=1dbFGiniEhT5VtBX589Ewyn-19FErF_nF" width="100%" height="100%">
+<div class="blurb">
+<iframe src="https://drive.google.com/open?id=1dbFGiniEhT5VtBX589Ewyn-19FErF_nF" width="100%" height="100%">CV</iframe>
+</div>
