--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,22 @@
 ---
 layout: default
-title: Publications
+title: CV of Yu-wen Lin
 ---
-<div class="blurb">
-<iframe src="https://drive.google.com/open?id=1dbFGiniEhT5VtBX589Ewyn-19FErF_nF" width="100%" height="100%">CV</iframe>
+<div class="cv">
+	<a href="#" class="download" title="Download CV as PDF">Download CV</a>
+		<h1>Yu-wen (Wendy) Lin</h1>
+		<address>
+		<strong>Affiliation</strong><br>
+		Cory Hall 406<br>
+		2626 Hearst Ave<br>
+		Berkeley, CA 94720<br>
+		<abbr title="phone">P:</abbr> (206) 886-7535<br>
+		<span class="obfuscate">yuwen.lin@berkeley.edu</span>
+		</address>
+	
+		<h2>Selected Publications</h2>
+	
+		<p><strong>Yu-wen Lin</strong>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel, "RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). <em>The Summer Undergraduate Research Fellowship (SURF) Symposium</em>. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
+		
+
 </div>
