--- a/pub/index.html
+++ b/pub/index.html
@@ -2,7 +2,8 @@
 layout: default
 title: Publications
 ---
-<div class="cv">
+<div class="blurb">
 <h1>Publications</h1>
-<p><strong>Yu-wen Lin</strong>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel, "RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). The Summer Undergraduate Research Fellowship (SURF) Symposium. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
+
+<p><b>Yu-wen Lin</b>, , Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel, "RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). The Summer Undergraduate Research Fellowship (SURF) Symposium. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
 </div>
