--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ---
 layout: default
-title: Wendy Lin
+title: Yu-wen (Wendy) Lin
 ---
 
 
 <div class="blurb">
-<!--	<h1></h1>-->
 	<h1>Yu-Wen (Wendy) Lin</h1>
 	<p><img src="images/demo/IMG_6110.jpg" width="150" height="200">
 	PhD Scholar
@@ -15,10 +14,7 @@ title: Wendy Lin
 	<b>Office</b>:  CREST Lab, 406 Cory Hall
 	</p>
 
-<!--    	<a target="_blank" href="https://www.linkedin.com/in/hari-prasanna-das-7ab31757/"> LinkedIn </a>-->
 	
 	<p>I am interested in optimization, machine learning, control systems and their applications to smart buildings. My directions of research including reinforcement learning on building control, modeling human behavior, and social game. My research analyzes human behavior to better energy efficiency in office buildings. </p>
-	<p>I am a second year PhD student in EECS at <a href="https://eecs.berkeley.edu/" target="_blank">UC Berkeley</a>. I am working at the intersection of machine learning, optimization, and thermal comfort. I am advised by <a href="https://vcresearch.berkeley.edu/faculty/costas-j-spanos" target="_blank">Costas J. Spanos</a>, and am part of the <a href="https://sinberbest.berkeley.edu/" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST)</a>. </p>
-	
-	
-</div><!-- /.blurb -->
+	<p>I am a second year PhD student in EECS at <a href="https://eecs.berkeley.edu/" target="_blank">UC Berkeley</a>. I am working at the intersection of machine learning, optimization, and thermal comfort. I am advised by <a href="https://vcresearch.berkeley.edu/faculty/costas-j-spanos" target="_blank">Costas J. Spanos</a>, and am part of the <a href="https://sinberbest.berkeley.edu/" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST) and RAISE lab</a>. </p>
+</div>
