--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ title: Wendy Lin
 <div class="blurb">
 	<h1>Yu-Wen (Wendy) Lin</h1>
 	<p><img src="images/demo/IMG_6110.jpg" width="150" height="200">
-	PhD Scholar
-	<a href="https://www.eecs.berkeley.edu"target="_blank">Department of Electrical Engineering and Computer Sciences</a>
-	<a href="https://www.berkeley.edu"target="_blank">University of California, Berkeley</a>
-	<b>Email</b>: yuwen.lin (at) berkeley.edu
+	PhD Scholar <br>
+	<a href="https://www.eecs.berkeley.edu"target="_blank">Department of Electrical Engineering and Computer Sciences</a><br>
+	<a href="https://www.berkeley.edu"target="_blank">University of California, Berkeley</a><br>
+	<b>Email</b>: yuwen.lin (at) berkeley.edu<br>
 	<b>Office</b>:  CREST Lab, 406 Cory Hall
 	</p>
 
