--- a/cv/index.html
+++ b/cv/index.html
@@ -6,7 +6,7 @@ title: CV of Yu-wen Lin
 	<a href="#" class="download" title="Download CV as PDF">Download CV</a>
 		<h1>Yu-wen (Wendy) Lin</h1>
 		<address>
-		<strong>Affiliation</strong><br>
+		<strong>University of California, Berkeley</strong><br>
 		Cory Hall 406<br>
 		2626 Hearst Ave<br>
 		Berkeley, CA 94720<br>
