--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout: default
 title: CV of Yu-wen Lin
 ---
 <div class="cv">
-	<a href="#" class="download" title="Download CV as PDF">Download CV</a>
+	<a href="https://drive.google.com/open?id=1dbFGiniEhT5VtBX589Ewyn-19FErF_nF" class="download" title="Download CV as PDF">Download CV</a>
 		<h1>Yu-wen (Wendy) Lin</h1>
 		<address>
 		<strong>University of California, Berkeley</strong><br>
