--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@ title: CV of Yu-wen Lin
 		<span class="obfuscate">yuwen.lin@berkeley.edu</span>
 		</address>
 	
-		<h2>Selected Publications</h2>
+		<h2>Publications</h2>
 	
 		<p><strong>Yu-wen Lin</strong>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel, "RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). <em>The Summer Undergraduate Research Fellowship (SURF) Symposium</em>. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
 		
