--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@ title: Wendy Lin
 	</p>
 
 	
-	<p>I am interested in optimization, machine learning, control systems and their applications to smart buildings. My directions of research including reinforcement learning on building control, modeling human behavior, and social game. My research analyzes human behavior to better energy efficiency in office buildings. </p>
+	<p>I am interested in optimization, machine learning, control systems and their applications to smart buildings. My directions of research include reinforcement learning on building control, modeling human behavior, and social game. My research analyzes human behavior to maximize human's comfort as well as improve energy efficiency in office buildings. </p>
 	<p>I am a second year PhD student in EECS at <a href="https://eecs.berkeley.edu/" target="_blank">UC Berkeley</a>. I am working at the intersection of machine learning, optimization, and thermal comfort. I am advised by <a href="https://vcresearch.berkeley.edu/faculty/costas-j-spanos" target="_blank">Costas J. Spanos</a>, and am part of the <a href="https://sinberbest.berkeley.edu/" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST) and RAISE lab</a>. </p>
 </div>
