--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Wendy Lin
 ---
 
 
-<div class="blurb">
+<div class="cv">
 	<h1>Yu-Wen (Wendy) Lin</h1>
 	<p><img src="images/demo/IMG_6110.jpg" width="400" height="500">
 	PhD Scholar <br>
