fix homepage format

--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@ title: Wendy Lin
 
 <div class="cv">
 	<h1>Yu-Wen (Wendy) Lin</h1>
-	<p><img src="images/demo/IMG_6110.jpg" width="300" height="400">
+    <table width"500px" height="100%" border="1">
+    <tr>
+    <td>
+    <img src="images/demo/IMG_6110.jpg">
+    </td>
+    <td>
+    <p>
 	PhD Scholar <br>
 	<a href="https://www.eecs.berkeley.edu"target="_blank">Department of Electrical Engineering and Computer Sciences</a><br>
 	<a href="https://www.berkeley.edu"target="_blank">University of California, Berkeley</a><br>
 	<b>Email</b>: yuwen.lin (at) berkeley.edu<br>
 	<b>Office</b>:  CREST Lab, 406 Cory Hall
 	</p>
+    </td>
+    </tr>
+    </table>
+	
 
 	
 	<p>I am interested in optimization, machine learning, control systems and their applications to smart buildings. My directions of research include reinforcement learning on building control, modeling human behavior, and social game. My research analyzes human behavior to maximize human's comfort as well as improve energy efficiency in office buildings. </p>
