--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Wendy Lin
     <table width"500px" height="100%" border="1">
     <tr>
     <td>
-    <img src="images/demo/IMG_6110.jpg">
+    <img src="images/demo/IMG_6110.jpg" width="250" height="300">
     </td>
     <td>
     <p>
