--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Wendy Lin
 
 <div class="cv">
 	<h1>Yu-Wen (Wendy) Lin</h1>
-    <table width"500px" height="100%" border="1">
+    <table width="500px" height="100%" border="1">
     <tr>
     <td>
     <img src="images/demo/IMG_6110.jpg" width="250" height="300">
