--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Wendy Lin
     <table width="100%" height="100%" border="0">
     <tr>
     <td>
-    <img src="images/demo/IMG_6110.jpg" style="width:auto; height: 300px" alt="alt text" width="320px">
+    <img src="images/demo/IMG_6110.jpg" style="width:auto; height: 300px">
     </td>
     <td>
     <p>
