--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Wendy Lin
 
 <div class="cv">
 	<h1>Yu-Wen (Wendy) Lin</h1>
-    <table width="100%" height="100%" border="0">
+    <table border="0">
     <tr>
     <td>
     <img src="images/demo/IMG_6110.jpg" style="width:auto; height: 300px">
