--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Wendy Lin
     <table border="0">
     <tr>
     <td>
-    <img src="images/demo/IMG_6110.jpg" style="width:auto; height: 300px">
+    <img src="images/demo/IMG_6110.jpg" style="width:200px; height: 300px">
     </td>
     <td>
     <p>
