--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@ title: Wendy Lin
 
 <div class="cv">
 	<h1>Yu-Wen (Wendy) Lin</h1>
-    <table border="0">
-    <tr>
-    <td>
+    <table style="float: right; margin: 12px" border="0" >
+    <tr><td>
     <img src="images/demo/IMG_6110.jpg" style="width:200px; height: 300px">
-    </td>
-    <td>
+    </td></tr>
+    <tr><td>
     <p>
 	PhD Scholar <br>
 	<a href="https://www.eecs.berkeley.edu"target="_blank">Department of Electrical Engineering and Computer Sciences</a><br>
@@ -19,8 +18,7 @@ title: Wendy Lin
 	<b>Email</b>: yuwen.lin (at) berkeley.edu<br>
 	<b>Office</b>:  CREST Lab, 406 Cory Hall
 	</p>
-    </td>
-    </tr>
+    </td></tr>
     </table>
 	
 
