--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@ title: Wendy Lin
 
 <div class="cv">
 	<h1>Yu-Wen (Wendy) Lin</h1>
-    <table style="float: right; margin: 12px" border="0" >
-    <tr><td>
-    <img src="images/demo/IMG_6110.jpg" style="width:200px; height: 300px">
-    </td></tr>
-    <tr><td>
+    <table style="float: right" border="0" >
+    <tr><th>
+    <img src="" style="width:200px; height: 300px">
+    </th>
+    </tr>
+    <tr>
+    <th>
     <p>
 	PhD Scholar <br>
 	<a href="https://www.eecs.berkeley.edu"target="_blank">Department of Electrical Engineering and Computer Sciences</a><br>
@@ -18,7 +20,7 @@ title: Wendy Lin
 	<b>Email</b>: yuwen.lin (at) berkeley.edu<br>
 	<b>Office</b>:  CREST Lab, 406 Cory Hall
 	</p>
-    </td></tr>
+    </th></tr>
     </table>
 	
 
