--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Wendy Lin
 	<h1>Yu-Wen (Wendy) Lin</h1>
     <table style="float: right" border="0" >
     <tr><th>
-    <img src="" style="width:200px; height: 300px">
+    <img src="" style="width:auto; height: 300px">
     </th>
     </tr>
     <tr>
