--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Wendy Lin
 <div class="cv">
 	<h1>Yu-Wen (Wendy) Lin</h1>
     <table style="float: right" border="0" >
-    <tr><td>
+    <tr><td align="center">
     <img src="images/demo/IMG_6110.jpg" style="width:auto; height: 300px">
     </td>
     </tr>
