--- a/cv/index.html
+++ b/cv/index.html
@@ -3,19 +3,57 @@ layout: default
 title: CV of Yu-wen Lin
 ---
 <div class="cv">
-	<a href="cv_Lin.pdf" class="download" title="Download CV as PDF">Download CV</a>
+	<a href="Lin_cv.pdf" class="download" title="Download CV as PDF">Download CV</a>
 		<h1>Yu-wen (Wendy) Lin</h1>
 		<address>
 		<strong>University of California, Berkeley</strong><br>
 		Cory Hall 406<br>
-		2626 Hearst Ave<br>
 		Berkeley, CA 94720<br>
-		<abbr title="phone">P:</abbr> (206) 886-7535<br>
+		(206) 886-7535<br>
 		<span class="obfuscate">yuwen.lin@berkeley.edu</span>
 		</address>
-	
+		<h2>Education</h2>
+		<ul>
+		<li><b>University of California, Berkeley</b><div align="right"><em>Aug 2018 - Present</em></div>
+			Ph.D. Scholor in Electrical Engineering and Computer Science <br>
+			Relevant Coursework: Optimization model in Engineering, Machine Learning, Deep Reinforcement Learning, Linear System Theory, Nonlinear Systems, Theoretical Statistics 
+			</li>
+			<br>
+		<li><b>Georgia Institute of Technology</b><div align="right"><em>Aug 2015 - May 2018</em></div>
+			</li>Bachelor of Science in Electrical Engineering; GPA: 3.8/4.0
+		</ul>
+		<h2>Preprints</h2>
+		<ul>
+		<li><p>Ioannis C. Konstantakopoulos, Hari Prasanna Das, Andrew R. Barkan, Shiying He, Tanya Veeravalli, Huihan Liu, Aummul Baneen Manasawala, <b>Yu-Wen Lin</b> and Costas J. Spanos, "Design, Benchmarking and Explainability Analysis of a Game-Theoretic Framework towards Energy Efficiency in Smart Infrastructure", <em>arXiv preprint arXiv:1910.07899, 2019</em>.
+		</p></li>
+		</ul>
 		<h2>Publications</h2>
-	
-		<p><strong>Yu-wen Lin</strong>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel, "RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). <em>The Summer Undergraduate Research Fellowship (SURF) Symposium</em>. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
+		<ul>
+		<li><p><strong>Yu-wen Lin</strong>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel, "RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). <em>The Summer Undergraduate Research Fellowship (SURF) Symposium</em>. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p></li>
+		</ul>
+		<h2>Professional/Research Experience</h2>
+		<ul>
+		<p style="text-align: left;"><b>Foxconn Technology Group</b>, <em>Operation Intern</em> <span style="float: right"><em>May 2018 - Aug 2018</em></span>
+		<li>Facilitated communication between technical and market teams to meet client’s specifications and product deadlines</li>
+		<li>Performed overseas client outreach for company’s product promotion, with 2 successful deals</li>
+		<li>Developed a labor phase organizational production line still referenced by project managers including materials
+production cost, on site labor costs, additional service fees and presented to the department and general manager</li>
+		</p></ul>
+		<ul>
+		<p style="text-align: left;"><b>Georgia Tech Low Frequency Lab</b>, <em>Undergraduate Research Assistant under Dr. Morris Cohen</em><span style="float: right"><em>Oct 2016 - May 2018</em></span>
+			<li>Designed a embedded computing-on-the-edge receiver that is able to detect very low frequency radio waves (3-30 kHz) to characterize Earth’s D-region ionosphere in real-time and identify phase instability from collected signal data taking the place of larger immovable modern models</li>
+			<li>Created a printed circuit board of an eighth order low pass filter by modifying the currently existing circuit board with Eagle CAD software, and ensured successful data collection from the antenna and propagation to the ADC</li>
+			<li>Simulated and tested circuits for the filter design using LT Spice to ensure the functionality of the design</li>
+			<li>Soldered components onto physical PCB, characterized the custom filter with a vector network analyzer to ensure filter fulfills the requirements receiver, and preliminary experiments confirmed the functionality as expected</li></p>
+		</ul>
+		<ul>
+		<p style="text-align: left"><b>Network for Computational Nanotechnology</b>, <em>Research Intern under Dr. Peter Bermel</em> <span style="float: right"><em>May 2017 - Aug 2017</em></span>
+			<li>Published a simulation tool (RadCool) that models radiative cooling to help designing new experiments</li>
+			<li>Developed Radcool using Rappture for the interactive interface and Python for the algorithm</li>
+			<li>Tool actively serves at least 8 different users and is run an average of 32 times per month</li>
+			<li>Knowledge of photovoltaic cells, thermophotovoltaic devices, and radiative cooling to design the simulation tool</li>
+			
+		</p></ul>
+		
 		
 </div>
