--- a/pub/index.html
+++ b/pub/index.html
@@ -3,7 +3,19 @@ layout: default
 title: Publications
 ---
 <div class="cv">
+<h4>Preprints</h4>
+<ul>
+<li>
+<p><b>Design, Benchmarking and Explainability Analysis of a Game-Theoretic Framework towards Energy Efficiency in Smart Infrastructure</b> <br>
+	Ioannis C. Konstantakopoulos, Hari Prasanna Das, Andrew R. Barkan, Shiying He, Tanya Veeravalli, Huihan Liu, Aummul Baneen Manasawala, <b>Yu-Wen Lin</b> and Costas J. Spanos <br>
+	<em>arXiv preprint arXiv:1910.07899, 2019</em> [<a href="https://arxiv.org/pdf/1910.07899.pdf" target="_blank">pdf</a>] [<a href="https://smartntu.eecs.berkeley.edu/" target="_blank">data</a>]
+</p></li>
+</ul>
 <h4>Publications</h4>
-
-<p><b>Yu-wen Lin</b>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel, "RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). <em>The Summer Undergraduate Research Fellowship (SURF) Symposium</em>. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
+<ul>
+<li><p><b>RadCool: a Web-enabled Simulation Tool for Radiative Cooling</b> <br>
+	<b>Yu-wen Lin</b>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel <br>
+	<em>The Summer Undergraduate Research Fellowship (SURF) Symposium, 2017</em> [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
+</li>
+</ul>
 </div>
