--- a/cv/index.html
+++ b/cv/index.html
@@ -52,8 +52,13 @@ production cost, on site labor costs, additional service fees and presented to t
 			<li>Developed Radcool using Rappture for the interactive interface and Python for the algorithm</li>
 			<li>Tool actively serves at least 8 different users and is run an average of 32 times per month</li>
 			<li>Knowledge of photovoltaic cells, thermophotovoltaic devices, and radiative cooling to design the simulation tool</li>
-			
 		</p></ul>
-		
+		<ul>
+		<p style="text-align: left"><b>Ultrafast Biomedical Optics Group</b>, <em>Reserach Intern under Dr. Tzu-Ming Liu</em><span style="float: right"><em>July 2014 - Aug 2014</em></span></p>
+			<li>The goal is to determine whether femtosecond lasers could be applied to human skin to detect different kinds of white blood cells; it can potentially allow doctors to examine a patient’s blood without having to draw a blood sample</li>
+			<li>Facilitated the preparation of human clinical trials and further optical inspections</li>
+			<li>Isolated white blood cells and mounted of specimens on the microscope</li>
+			<li>Collected and Analyzed nonlinear optical images using femtosecond lasers</li>
+		</ul>
 		
 </div>
