--- a/cv/index.html
+++ b/cv/index.html
@@ -14,13 +14,12 @@ title: CV of Yu-wen Lin
 		</address>
 		<h2>Education</h2>
 		<ul>
-		<li><b>University of California, Berkeley</b><div align="right"><em>Aug 2018 - Present</em></div>
+		<p style="text-align: left"><b>University of California, Berkeley</b><span style="float: right"><em>Aug 2018 - Present</em></span> <br>
 			Ph.D. Scholor in Electrical Engineering and Computer Science <br>
 			Relevant Coursework: Optimization model in Engineering, Machine Learning, Deep Reinforcement Learning, Linear System Theory, Nonlinear Systems, Theoretical Statistics 
-			</li>
-			<br>
-		<li><b>Georgia Institute of Technology</b><div align="right"><em>Aug 2015 - May 2018</em></div>
-			</li>Bachelor of Science in Electrical Engineering; GPA: 3.8/4.0
+			</p>
+		<p style="text-align: left"><b>Georgia Institute of Technology</b><span style="float: right"><em>Aug 2015 - May 2018</em></span> <br>
+			Bachelor of Science in Electrical Engineering; GPA: 3.8/4.0 </p>
 		</ul>
 		<h2>Preprints</h2>
 		<ul>
@@ -59,6 +58,17 @@ production cost, on site labor costs, additional service fees and presented to t
 			<li>Facilitated the preparation of human clinical trials and further optical inspections</li>
 			<li>Isolated white blood cells and mounted of specimens on the microscope</li>
 			<li>Collected and Analyzed nonlinear optical images using femtosecond lasers</li>
+		</ul>
+	
+		<h2>Awards and Honor</h2>
+		<ul>
+		<li><p style="text-align: left">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST) <span style="float: right"><em>2018 - Present</em></span> <br>
+			Graduate fellowship, National Research Foundation (NRF), Singapore</p>
+		</li>
+		<li><p style="text-align: left">Member, Tau Beta Pi Engineering Honor Society<span style="float: right"><em>2017 - Present</em></span></p></li>
+		<li><p style="text-align: left">Opportunity Research Scholar, Georgia Tech<span style="float: right"><em>2016 - 2018</em></span></p></li>
+		<li><p style="text-align: left">Summer Undergraduate Research Fellowship, Purdue University<span style="float: right"><em>2017</em></span></p></li>
+		<li><p style="text-align: left">Best Research Presentation Award at GT ORS Research Competition<span style="float: right"><em>2016 &amp; 2017</em></span></p></li>
 		</ul>
 		
 </div>
