--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@ title: CV of Yu-wen Lin
 ---
 <div class="cv">
 	<a href="Lin_cv.pdf" class="download" title="Download CV as PDF">Download CV</a>
-		<h1>Yu-wen (Wendy) Lin</h1>
+		<h1>Yu-Wen (Wendy) Lin</h1>
 		<address>
 		<strong>University of California, Berkeley</strong><br>
 		Cory Hall 406<br>
