--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: Wendy Lin
 
 <div class="cv">
 	<h2>Yu-Wen (Wendy) Lin</h2>
+<!--
     <table style="float: right" border="0" >
     <tr><td align="center">
     <img src="images/demo/IMG_6110.jpg" style="width:auto; height: 300px">
@@ -22,9 +23,28 @@ title: Wendy Lin
 	</p>
     </th></tr>
     </table>
+-->
+	<table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+     <tr>
+     <td width="40%">
+       <img width="300" src="/images/demo/IMG_7464.jpg" />
+       </td>
+       <td width="60%" valign="left">
+       <p><font size="3"> I am a second year Ph.D. student in the Department of  <a href="https://eecs.berkeley.edu/" target="_blank">Electrical Engineering and Computer Sciences</a> at <a href="http://www.berkeley.edu/" target="_blank">UC Berkeley</a> mentored by <a href="http://vcresearch.berkeley.edu/faculty/costas-j-spanos/" target="_blank">Prof. Costas Spanos</a>. I received B.S. in Electrical Engineering and Computer Engineering at Georgia Tech in 2018.
+        <p>
+        My research interests lie broadly in the span of optimization, machine learning, control systems and their applications to smart buildings. My recent work focuses on modeling human hysteresis, generative models, and applying deep reinforcement learning to program synthesis.
+		</p>
+		<p>
+		<b>Email</b>: yuwen.lin (at) berkeley.edu <br>
+		<b>Office</b>: CREST Lab, 406 Cory Hall
+		</p>
+       </font></p>
+       </td> 
+     </tr>
+	</table>
 	
-
-	
-	<p>I am interested in optimization, machine learning, control systems and their applications to smart buildings. My directions of research include reinforcement learning on building control, modeling human behavior, and social game. My research analyzes occupants' behavior to maximize their comfort as well as improve energy efficiency in office buildings. My research also include some theoretical work on generative models and deep reinforcement learning. </p>
-	<p>I am a second year PhD student in EECS at <a href="https://eecs.berkeley.edu/" target="_blank">UC Berkeley</a>. I am working at the intersection of machine learning, optimization, and smart buildings. I am advised by <a href="https://vcresearch.berkeley.edu/faculty/costas-j-spanos" target="_blank">Costas J. Spanos</a>, and am part of the <a href="https://sinberbest.berkeley.edu/" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST)</a> and RAISE Lab. </p>
+	<h2>News!</h2>
+	<ul>
+		<li>November 2019: I am invited to attend <a href="https://www.nrf.gov.sg/gyss/home"  target="_blank">Global Young Scientists Summit (GYSS), 2020</a></li> to be held in Singapore in January 2020
+	</ul>
 </div>
