--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Wendy Lin
        <img width="300" src="/images/demo/IMG_7464.jpg" />
        </td>
        <td width="60%" valign="left">
-       <p><font size="3"> I am a second year Ph.D. student in the Department of  <a href="https://eecs.berkeley.edu/" target="_blank">Electrical Engineering and Computer Sciences</a> at <a href="http://www.berkeley.edu/" target="_blank">UC Berkeley</a> mentored by <a href="http://vcresearch.berkeley.edu/faculty/costas-j-spanos/" target="_blank">Prof. Costas Spanos</a>. I received B.S. in Electrical Engineering and Computer Engineering at Georgia Tech in 2018.
+       <p><font size="3"> I am a second year Ph.D. student in the Department of  <a href="https://eecs.berkeley.edu/" target="_blank">Electrical Engineering and Computer Sciences</a> at <a href="http://www.berkeley.edu/" target="_blank">UC Berkeley</a> mentored by <a href="http://vcresearch.berkeley.edu/faculty/costas-j-spanos/" target="_blank">Prof. Costas Spanos</a>. I am part of the <a href="" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST)</a> and <a href="http://raise.berkeley.edu/" target="_blank">Research in Artificial Intelligence for Sustainable Energy (RAISE)</a> Lab. I received B.S. in Electrical Engineering and Computer Engineering at Georgia Tech in 2018.
         <p>
         My research interests lie broadly in the span of optimization, machine learning, control systems and their applications to smart buildings. My recent work focuses on modeling human hysteresis, generative models, and applying deep reinforcement learning to program synthesis.
 		</p>
@@ -42,9 +42,10 @@ title: Wendy Lin
        </td> 
      </tr>
 	</table>
-	
-	<h2>News!</h2>
+
+	<h2 id="news">News!</h2>
 	<ul>
-		<li>November 2019: I am invited to attend <a href="https://www.nrf.gov.sg/gyss/home"  target="_blank">Global Young Scientists Summit (GYSS), 2020</a></li> to be held in Singapore in January 2020
+		<li>November 2019: I am invited to attend <a href="https://www.nrf.gov.sg/gyss/home"  target="_blank">Global Young Scientists Summit (GYSS), 2020</a> to be held in Singapore in January 2020 </li>
 	</ul>
+
 </div>
