--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ title: Wendy Lin
        <img width="300" src="/images/demo/IMG_7464.jpg" />
        </td>
        <td width="60%" valign="left">
-       <p><font size="3"> I am a second year Ph.D. student in the Department of  <a href="https://eecs.berkeley.edu/" target="_blank">Electrical Engineering and Computer Sciences</a> at <a href="http://www.berkeley.edu/" target="_blank">UC Berkeley</a> mentored by <a href="http://vcresearch.berkeley.edu/faculty/costas-j-spanos/" target="_blank">Prof. Costas Spanos</a>. I am part of the <a href="" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST)</a> and <a href="http://raise.berkeley.edu/" target="_blank">Research in Artificial Intelligence for Sustainable Energy (RAISE)</a> Lab. I received B.S. in Electrical Engineering and Computer Engineering at Georgia Tech in 2018.
+       <p> I am a second year Ph.D. student in the Department of  <a href="https://eecs.berkeley.edu/" target="_blank">Electrical Engineering and Computer Sciences</a> at <a href="http://www.berkeley.edu/" target="_blank">UC Berkeley</a> advised by <a href="http://vcresearch.berkeley.edu/faculty/costas-j-spanos/" target="_blank">Prof. Costas J. Spanos</a>. I am part of the <a href="http://raise.berkeley.edu/" target="_blank">Research in Artificial Intelligence for Sustainable Energy (RAISE)</a> Lab and a graduate student researcher for <a href="" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST)</a>. I received B.S. in Electrical Engineering and Computer Engineering from Georgia Tech in 2018.
         <p>
-        My research interests lie broadly in the span of optimization, machine learning, control systems and their applications to smart buildings. My recent work focuses on modeling human hysteresis, generative models, and applying deep reinforcement learning to program synthesis.
+        My research interests lie broadly in the span of optimization, deep learning and their applications to smart buildings. My recent work focuses on deep generative modeling and reinforcement learning.
 		</p>
 		<p>
 		<b>Email</b>: yuwen.lin (at) berkeley.edu <br>
