--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ title: Wendy Lin
 
 	<h2 id="news">News!</h2>
 	<ul>
+        <li>March 2020: Our paper <a href="https://www.sciencedirect.com/science/article/abs/pii/S0360132320301372?via%3Dihub" target="_blank">The Impact of a View from a Window on Thermal Comfort, Emotion, and Cognitive Performance</a> is published in <a href="https://www.journals.elsevier.com/building-and-environment" target="_blank">Building and Environment</a> Journal</li>
         <li>January 2020: We are organizing <a href="http://sinberbest.berkeley.edu/amlies/2020" target="_blank">2nd International Workshop on Applied Machine Learning for Intelligent Energy Systems (AMLIES)</a>, co-located with <a href="https://energy.acm.org/conferences/eenergy/2020/" target="_blank">ACM e-Energy Conference 2020</a> at Melbourne, Australia. Please consider submitting your work. [<a href="http://sinberbest.berkeley.edu/sites/default/files/amlies_2020_cfp.pdf" target="_blank">Call for Papers</a>]</li>
         <li>November 2019: I am invited to attend <a href="https://www.nrf.gov.sg/gyss/home"  target="_blank">Global Young Scientists Summit (GYSS), 2020</a> to be held in Singapore in January 2020 </li>
 	</ul>
