--- a/pub/index.html
+++ b/pub/index.html
@@ -13,9 +13,13 @@ title: Publications
 </ul>
 <h4>Publications</h4>
 <ul>
-<li><p><b>RadCool: a Web-enabled Simulation Tool for Radiative Cooling</b> <br>
+	<li><p><b>The Impact of a View from a Window on Thermal Comfort, Emotion, and Cognitive Performance</b> <br>
+	Won Hee Ko, Stefano Schiavon, Hui Zhang, Lindsay Graham, Gail Brager, Iris Mauss, and <b>Yu-Wen Lin</b><br>
+	<em>Building and Environment (2020)</em> [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0360132320301372?via%3Dihub target="_blank">pdf</a>]</p>
+	</li>
+	<li><p><b>RadCool: a Web-enabled Simulation Tool for Radiative Cooling</b> <br>
 	<b>Yu-wen Lin</b>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel <br>
-	<em>The Summer Undergraduate Research Fellowship (SURF) Symposium, 2017</em> [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
-</li>
+	<em>The Summer Undergraduate Research Fellowship (SURF) Symposium (2017)</em> [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p>
+	</li>
 </ul>
 </div>
