--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ title: Wendy Lin
        <img width="300" src="/images/demo/IMG_7464.jpg" />
        </td>
        <td width="60%" valign="left">
-       <p> I am a second year Ph.D. student in the Department of  <a href="https://eecs.berkeley.edu/" target="_blank">Electrical Engineering and Computer Sciences</a> at <a href="http://www.berkeley.edu/" target="_blank">UC Berkeley</a> advised by <a href="http://vcresearch.berkeley.edu/faculty/costas-j-spanos/" target="_blank">Prof. Costas J. Spanos</a>. I am part of the <a href="http://raise.berkeley.edu/" target="_blank">Research in Artificial Intelligence for Sustainable Energy (RAISE)</a> Lab and a graduate student researcher for <a href="" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST)</a>. I received B.S. in Electrical Engineering and Computer Engineering from Georgia Tech in 2018.
+       <p> I am a Ph.D. student in the Department of  <a href="https://eecs.berkeley.edu/" target="_blank">Electrical Engineering and Computer Sciences</a> at <a href="http://www.berkeley.edu/" target="_blank">UC Berkeley</a> advised by <a href="http://vcresearch.berkeley.edu/faculty/costas-j-spanos/" target="_blank">Prof. Costas J. Spanos</a>. I am part of the <a href="http://raise.berkeley.edu/" target="_blank">Research in Artificial Intelligence for Sustainable Energy (RAISE)</a> Lab and a graduate student researcher for <a href="" target="_blank">Singapore-Berkeley Building Efficiency and Sustainability in the Tropics (SinBerBEST)</a>. I received M.S. in Electrical Engineering and Computer Sciences from UC Berkeley in 2020 and B.S. in Electrical Engineering and Computer Engineering from Georgia Tech in 2018.
         <p>
-        My research interests lie broadly in the span of optimization, deep learning and their applications to smart buildings. My recent work focuses on deep generative modeling and reinforcement learning.
+        My research interests lie broadly in the span of modeling, optimization, control and their applications to smart buildings. My recent work focuses on digital twin for built environments.
 		</p>
 		<p>
 		<b>Email</b>: yuwen.lin (at) berkeley.edu <br>
@@ -45,6 +45,9 @@ title: Wendy Lin
 
 	<h2 id="news">News!</h2>
 	<ul>
+        <li>January 2021: I am serving as a GSI (Graduate Student Instructor) for an upper division class <a href="https://inst.eecs.berkeley.edu/~cs188/sp21/" target="_blank">"CS188: Artificial Intelligence"</a> offering with <a href="http://people.eecs.berkeley.edu/~russell/" target="_blank">Prof. Stuart Russel</a> and <a href="https://people.eecs.berkeley.edu/~dawnsong/" target="_blank">Prof. Dawn Song</a>. 
+        <li>December 2020: I received M.S. in Electrical Engineering and Computer Science at UC Berkeley. My thesis: Developing a Digital Twin for Indoor Environments: A Case Study.
+        <li>August 2020: I am serving as a discussion and content GSI (Graduate Student Instructor) for a lower division class "EE 16A: Designing Information Devices and System I" in Fall 2020 offering with <a href="https://people.eecs.berkeley.edu/~gireeja/" target="_blank">Prof. Gireeja Ranade</a>.
         <li>March 2020: Our paper <a href="https://www.sciencedirect.com/science/article/abs/pii/S0360132320301372?via%3Dihub" target="_blank">The Impact of a View from a Window on Thermal Comfort, Emotion, and Cognitive Performance</a> is published in <a href="https://www.journals.elsevier.com/building-and-environment" target="_blank">Building and Environment</a> Journal</li>
         <li>January 2020: We are organizing <a href="http://sinberbest.berkeley.edu/amlies/2020" target="_blank">2nd International Workshop on Applied Machine Learning for Intelligent Energy Systems (AMLIES)</a>, co-located with <a href="https://energy.acm.org/conferences/eenergy/2020/" target="_blank">ACM e-Energy Conference 2020</a> at Melbourne, Australia. Please consider submitting your work. [<a href="http://sinberbest.berkeley.edu/sites/default/files/amlies_2020_cfp.pdf" target="_blank">Call for Papers</a>]</li>
         <li>November 2019: I am invited to attend <a href="https://www.nrf.gov.sg/gyss/home"  target="_blank">Global Young Scientists Summit (GYSS), 2020</a> to be held in Singapore in January 2020 </li>
