--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Wendy Lin
 
 	<h2 id="news">News!</h2>
 	<ul>
-        <li>January 2021: I am serving as a GSI (Graduate Student Instructor) for an upper division class <a href="https://inst.eecs.berkeley.edu/~cs188/sp21/" target="_blank">"CS188: Artificial Intelligence"</a> offering with <a href="http://people.eecs.berkeley.edu/~russell/" target="_blank">Prof. Stuart Russel</a> and <a href="https://people.eecs.berkeley.edu/~dawnsong/" target="_blank">Prof. Dawn Song</a>. 
+        <li>January 2021: I am serving as a GSI (Graduate Student Instructor) for an upper division class <a href="https://inst.eecs.berkeley.edu/~cs188/sp21/" target="_blank">"CS188: Introduction to Artificial Intelligence"</a> offering with <a href="http://people.eecs.berkeley.edu/~russell/" target="_blank">Prof. Stuart Russel</a> and <a href="https://people.eecs.berkeley.edu/~dawnsong/" target="_blank">Prof. Dawn Song</a>. 
         <li>December 2020: I received M.S. in Electrical Engineering and Computer Science at UC Berkeley. My thesis: Developing a Digital Twin for Indoor Environments: A Case Study.
         <li>August 2020: I am serving as a discussion and content GSI (Graduate Student Instructor) for a lower division class "EE 16A: Designing Information Devices and System I" in Fall 2020 offering with <a href="https://people.eecs.berkeley.edu/~gireeja/" target="_blank">Prof. Gireeja Ranade</a>.
         <li>March 2020: Our paper <a href="https://www.sciencedirect.com/science/article/abs/pii/S0360132320301372?via%3Dihub" target="_blank">The Impact of a View from a Window on Thermal Comfort, Emotion, and Cognitive Performance</a> is published in <a href="https://www.journals.elsevier.com/building-and-environment" target="_blank">Building and Environment</a> Journal</li>
