--- a/pub/index.html
+++ b/pub/index.html
@@ -13,9 +13,14 @@ title: Publications
 </ul>
 <h4>Publications</h4>
 <ul>
+    <li><p><b>Developing a Digital Twiin for Indoor Environments: A Case Study</b><br>
+    <b>Yu-Wen Lin</b><br>
+    <em>Master Thesis (2020)</em>
+    </p>
+    </li>
 	<li><p><b>The Impact of a View from a Window on Thermal Comfort, Emotion, and Cognitive Performance</b> <br>
 	Won Hee Ko, Stefano Schiavon, Hui Zhang, Lindsay Graham, Gail Brager, Iris Mauss, and <b>Yu-Wen Lin</b><br>
-	<em>Building and Environment (2020)</em> [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0360132320301372?via%3Dihub target="_blank">pdf</a>]</p>
+	<em>Building and Environment (2020)</em> [<a href="https://www.sciencedirect.com/science/article/abs/pii/S0360132320301372?via%3Dihub" target="_blank">pdf</a>]</p>
 	</li>
 	<li><p><b>RadCool: a Web-enabled Simulation Tool for Radiative Cooling</b> <br>
 	<b>Yu-wen Lin</b>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel <br>
