--- a/cv/index.html
+++ b/cv/index.html
@@ -14,8 +14,13 @@ title: CV of Yu-wen Lin
 		</address>
 		<h2>Education</h2>
 		<ul>
-		<p style="text-align: left"><b>University of California, Berkeley</b><span style="float: right"><em>Aug 2018 - Present</em></span> <br>
+		<p style="text-align: left"><b>University of California, Berkeley</b><span style="float: right"><em>Jan 2021 - Present</em></span> <br>
 			Ph.D. Scholor in Electrical Engineering and Computer Science <br>
+            Berkeley Education Alliance for Research in Singapore (BEARS)
+            </p>
+        <p style="text-align: left"><b>University of California, Berkeley</b><span style="float: right"><em>Aug 2018 - Dec 2020</em></span> <br>
+            M.S. in Electrical Engineering and Computer Science <br>
+            Thesis: Developing a Digital Twin for Indoor Environments: A Case Study. <br>
 			Relevant Coursework: Optimization model in Engineering, Machine Learning, Deep Reinforcement Learning, Linear System Theory, Nonlinear Systems, Theoretical Statistics 
 			</p>
 		<p style="text-align: left"><b>Georgia Institute of Technology</b><span style="float: right"><em>Aug 2015 - May 2018</em></span> <br>
@@ -28,7 +33,8 @@ title: CV of Yu-wen Lin
 		</ul>
 		<h2>Publications</h2>
 		<ul>
-		<li><p><strong>Yu-wen Lin</strong>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel, "RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). <em>The Summer Undergraduate Research Fellowship (SURF) Symposium</em>. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p></li>
+        <li><p><strong>Yu-Wen Lin</strong>. Developing a Digital Twin for Indoor Environments: A Case Study (2020). RadCool: a Web-enabled Simulation Tool for Radiative Cooling" (August 3, 2017). <em>Thesis</em>. </p></li>
+		<li><p><strong>Yu-wen Lin</strong>, Evan L. Schlenker, Zhiguang Zhou, and Peter Bermel. RadCool: a Web-enabled Simulation Tool for Radiative Cooling (2017). <em>The Summer Undergraduate Research Fellowship (SURF) Symposium</em>. Paper 42. [<a href="https://nanohub.org/resources/27088/download/Lin_Yuwen_TechPaper.pdf" target="_blank">pdf</a>]</p></li>
 		</ul>
 		<h2>Professional/Research Experience</h2>
 		<ul>
@@ -59,6 +65,15 @@ production cost, on site labor costs, additional service fees and presented to t
 			<li>Isolated white blood cells and mounted of specimens on the microscope</li>
 			<li>Collected and Analyzed nonlinear optical images using femtosecond lasers</li>
 		</ul>
+        <h2>Teaching Experience</h2>
+        <ul>
+            <li><p style="text-align: left">CS 188 Introduction to Artifitial Intelligence<span style="float: right"><em>Spring 2021</em></span> <br>
+                Content Graduate Student Instructor (GSI)</p>
+            <li><p style="text-align: left">EE 16A Designing Information Devices and Systems I <span style="float: right"><em>Fall 2020</em></span> <br>
+                Content and Discussion Graduate Student Instructor (GSI)</p>
+            
+        
+        </ul>
 	
 		<h2>Awards and Honor</h2>
 		<ul>
